# WARP-p2p-client

./: .gitignore  CHANGELOG.md  CMakeLists.txt.example  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_TEST_GUIDE.md  P2P_DLL_INJECTOR_GUIDE.md  P2P_Patch_Session.yml  P2P_Patch_Session_clean.yml  P2P_Patcher.spec  P2P_Session.yml  PHASE_5_DEPLOYMENT_READINESS_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  Patcher.spec  Patches.yml  Patches_Chinese Simplified.ini  Patches_Chinese Traditional.ini  Patches_English.ini  Patches_PT-BR.ini  Patches_Russian.ini  Patches_Spanish.ini  Patches_Thai.ini  Patches_Turkish.ini  README.md  RO_CLIENT_CONFLICT_ANALYSIS.md  RO_CLIENT_INTEGRATION_CHECKLIST.md  RO_CLIENT_MIGRATION_GUIDE.md  WARP_PATCHING_GUIDE.md  WINDOWS_CLIENT_SETUP_GUIDE.md  build_injector.ps1  build_log.txt  build_p2p.sh  build_x64_manifest.ps1  build_x86.ps1  build_x86_manifest.ps1  deploy_x86.ps1  injector.cpp  launcher.cpp  launcher_b64.txt  merge_patcher.py  (+12 more)
Core/Network/: P2PNetwork.cpp  P2PNetwork.hpp  WebRTCManager.cpp  WebRTCManager.hpp  WebRTCPeerConnection.cpp  WebRTCPeerConnection.hpp
Core/Performance/: P2PPerformanceMonitor.hpp
Core/Security/: P2PEncryption.cpp  P2PEncryption.hpp  P2PSecurityManager.hpp
Data/: config.ini.example  resourceinfo.ini.example
Inputs/: P2P_DLLSpec.yml  Translations_EN.yml
P2P-DLL/: .gitignore  API_REFERENCE.md  BUILD_GUIDE.md  BUILD_STATUS.md  CMakeLists.txt  DEPLOYMENT_FOR_BEGINNERS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  INTEGRATION_TEST_PLAN.md  OVERLAY_GUIDE.md  PATCHER_GUIDE.md  QUICK_DEPLOYMENT.md  RATHENA_AI_INTEGRATION.md  README.md  WEBRTC_GUIDE.md  build_errors.txt  build_log.txt  errors.txt  fix_build.ps1  get_errors.ps1  linker_errors.txt  vcpkg.json
P2P-DLL/config/: p2p_config.json  p2p_config.production.example.json
P2P-DLL/include/: AuthManager.h  BandwidthManager.h  CompressionManager.h  ConfigManager.h  HttpClient.h  ITransport.h  Logger.h  NetworkHooks.h  NetworkManager.h  PacketRouter.h  PacketSerializer.h  QuicTransport.h  SecurityManager.h  SignalingClient.h  Types.h  WebRTCManager.h  WebRTCPeerConnection.h
P2P-DLL/include/bandwidth/: BandwidthManager.h
P2P-DLL/include/compression/: CompressionManager.h
P2P-DLL/include/overlay/: KeyboardHook.h  OverlayRenderer.h
P2P-DLL/patcher/: Patcher.cpp
P2P-DLL/src/: DllMain.cpp
P2P-DLL/src/bandwidth/: BandwidthManager.cpp
P2P-DLL/src/compression/: CompressionManager.cpp
P2P-DLL/src/core/: CompressionManager.cpp  ConfigManager.cpp  NetworkManager.cpp
P2P-DLL/src/exports/: PacketHook.cpp
P2P-DLL/src/network/: HttpClient.cpp  NetworkHooks.cpp  PacketRouter.cpp  QuicTransport.cpp  SignalingClient.cpp
P2P-DLL/src/overlay/: KeyboardHook.cpp  OverlayRenderer.cpp
P2P-DLL/src/security/: AuthManager.cpp  SecurityManager.cpp  SecurityManager_clean.cpp
P2P-DLL/src/utils/: Logger.cpp  PacketSerializer.cpp
P2P-DLL/src/webrtc/: WebRTCManager.cpp  WebRTCPeerConnection.cpp
P2P-DLL/tests/: CMakeLists.txt  clean_test.cpp  isolated_test.cpp  minimal_test.cpp  simple_test.cpp  test_bandwidth_manager.cpp  test_compression_basic.cpp  test_config.cpp  test_config.json  test_config_clean.cpp  test_config_fixed.cpp  test_core_functionality.cpp  test_ecdhe_key_exchange.cpp  test_http_client.cpp  test_network_manager.cpp
Patches/: Character.yml  Client.yml  Data.yml  HookP2PPackets.qs  LoadP2PDLL.qs  Network.yml  Special.yml  UI.yml  p2p_config_manager.yml  p2p_database.yml  p2p_hosting.yml  p2p_majority_host.yml  p2p_map_instance.yml  p2p_secure_sync.yml  rathena_features.yml  universal_p2p.yml
Scripts/Patches/: CustomPath.qjs
Scripts/Support/: P2PConfigManager.qjs
doc/: p2p_client_patches.md  p2p_database_patches.md
docs/: ADMIN_GUIDE.md
tests/: load_test.py
tools/: patch_verifier.py
